# tokimo-app-apple-music

./: .gitignore  Cargo.toml  README.md  lefthook.yml  tokimo-app.toml
.github/workflows/: ci.yml
crates/rust-apple-music/: Cargo.toml  build.rs
crates/rust-apple-music/proto/: license_protocol.proto
crates/rust-apple-music/src/: cdm.rs  decrypt.rs  download.rs  lib.rs  stream.rs  widevine.rs  wrapper_client.rs
skills/apple-music-download/: SKILL.md
skills/apple-music-latest-albums/: SKILL.md
skills/download/: SKILL.md
skills/download-music/: SKILL.md
skills/latest-albums/: SKILL.md
src/: app_server.rs  cli.rs  db.rs  error.rs  main.rs  openapi_client.rs
src/handlers/: api.rs  audio.rs  auth.rs  mod.rs  proxy.rs
src/handlers/api/: album.rs  artist.rs  download.rs  mod.rs  search.rs  song.rs  token.rs
ui/: package.json  vite.config.ts
ui/src/: AppContext.tsx  AppleMusicContent.tsx  AppleMusicHeadless.tsx  index.css  index.tsx  proxy-utils.ts  shared-audio.ts
ui/src/api-types/: PlaybackStateData.ts
ui/src/components/: AppleMusicLayout.tsx  AppleMusicLogin.tsx  AppleMusicPlayer.tsx  AppleMusicProvider.tsx  AppleMusicSidebar.tsx  MenuBarLyricsWidget.tsx  apple-music-fetch-interceptor.ts  types.ts  use-apple-music-lyrics.ts  use-apple-music-session.ts  use-musickit.ts
ui/src/components/components/: ArtworkImage.tsx  LyricsView.tsx  MediaItemCard.tsx  QueueView.tsx  TrackList.tsx
ui/src/components/hooks/: useAlbumNavigation.ts  useArtistNavigation.ts
ui/src/components/pages/: AlbumPage.tsx  ArtistPage.tsx  BrowsePage.tsx  ForYouPage.tsx  LibraryPage.tsx  NowPlayingPage.tsx  PlaylistPage.tsx  SearchPage.tsx
ui/src/hooks/: use-sidebar-collapsed.ts  usePlaybackStatePersistence.ts
ui/src/shell/: engine-ref.ts  hooks.ts
