[package]
name        = "tokimo-app-apple-music"
version     = "0.1.0"
edition     = "2024"
rust-version = "1.94.0"
license     = "MIT OR Apache-2.0"
description = "Tokimo Apple Music app: developer-token scraping + webplayback proxy + lossless decryption."
repository  = "https://github.com/tokimo-lab/tokimo-app-apple-music"

[dependencies]
tokimo-bus-client   = { git = "https://github.com/tokimo-lab/tokimo-bus.git", rev = "5a605f4c7d6953349f719f3c9963fd34d72b834d" }
tokimo-bus-protocol = { git = "https://github.com/tokimo-lab/tokimo-bus.git", rev = "5a605f4c7d6953349f719f3c9963fd34d72b834d", features = ["axum"] }
tokimo-bus-auth     = { git = "https://github.com/tokimo-lab/tokimo-bus.git", rev = "5a605f4c7d6953349f719f3c9963fd34d72b834d", features = ["axum", "cli-db"] }
tokimo-bus-cli      = { git = "https://github.com/tokimo-lab/tokimo-bus.git", rev = "5a605f4c7d6953349f719f3c9963fd34d72b834d" }

# 复用从主仓库迁出的 rust-apple-music crate（音频下载 / 解密 / HLS 流）
rust-apple-music    = { path = "crates/rust-apple-music" }

tokio              = { version = "1", features = ["rt-multi-thread", "macros", "time", "signal"] }
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
uuid               = { version = "1", features = ["v4", "serde"] }
chrono             = { version = "0.4", features = ["serde"] }
anyhow             = "1"
regex              = "1"
reqwest            = { version = "0.13", default-features = false, features = ["json", "rustls", "stream"] }
futures-util       = "0.3"
clap               = { version = "4", features = ["derive", "env"] }
sea-orm            = { version = "2.0.0-rc.38", default-features = false, features = ["sqlx-postgres", "runtime-tokio-rustls", "with-uuid", "with-chrono", "with-json", "macros"] }
rust-embed         = { version = "8", features = ["debug-embed"] }
mime_guess         = "2"
axum               = { version = "0.8", features = ["json"] }

[profile.release]
lto       = "thin"
opt-level = 3
strip     = "symbols"
