[package]
name = "rust-apple-music"
version = "0.1.0"
edition = "2024"
description = "Apple Music DRM decryption, stream download and CDM implementation"


[lib]
name = "rust_apple_music"
path = "src/lib.rs"

[dependencies]
prost = { version = "0.14.3", features = ["derive"] }
rsa = { version = "0.9.10", default-features = false }
aes = { version = "0.8.4", default-features = false }
cbc = { version = "0.1.2", features = ["block-padding"] }
cmac = { version = "0.7.2", default-features = false }
ctr = "0.9.2"
sha1 = "0.10"
rand_core = { version = "0.6", features = ["getrandom"] }
m3u8-rs = "5"
base64 = "0.22"
bytes = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", features = ["json", "multipart", "query"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }

[build-dependencies]
prost-build = "0.14.3"
